2024-09-13  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Authors@R): Added

2024-05-22  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* src/FactorExample.cpp: Add 'cstint' header needed on Windows

2024-05-21  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Use tinyverse.netlify.app for dependency badge

2024-03-04  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v4,
	add r-ci-setup actions

2023-04-08  Dirk Eddelbuettel  <edd@debian.org>

	* src/Makevars: No longer set a compilation standard, small edits
	* src/Makevars.win: Ditto

2023-03-28  Dirk Eddelbuettel  <edd@debian.org>

	* src/FactorExample.cpp: Renamed

2023-03-27  Dirk Eddelbuettel  <edd@debian.org>

	* src/makeFactor.cpp (factor2char, char2factor): Add two simple to
	and from factor converters
	* man/factor2char.Rd: Documentation
	* src/RcppExports.cpp: Updated
	* R/RcppExports.R: Updated
	* NAMESPACE: Idem

	* .editorconfig: Added

2022-11-14  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v3

2022-07-24  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* README.md: Use https:// URLs, point to www.rcpp.org
	* man/RcppExamples-package.Rd: Use https:// URL
	* DESCRIPTION: Idem

2021-12-10  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Remove unused continuous integration artifact and badge

2021-05-09  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (URL): Add GitHub repo to URL field

2021-01-10  Dirk Eddelbuettel  <edd@debian.org>

        * .github/workflows/ci.yaml: Add CI runner using r-ci
	* README.md: Add new badge

2020-08-09  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

2020-08-06  Dirk Eddelbuettel  <edd@debian.org>

	* src/DateExample.cpp (DateExample): Focus on new Date vector

2020-07-31  Dirk Eddelbuettel  <edd@debian.org>
