@@ -1,7 +1,7 @@
 Package: RcppExamples
 Title: Examples using 'Rcpp' to Interface R and C++
-Version: 0.1.9.3
-Date: 2024-05-22
+Version: 0.1.9.4
+Date: 2025-02-20
 Authors@R: c(person("Dirk", "Eddelbuettel", role = c("aut", "cre"), email = "edd@debian.org",
                     comment = c(ORCID = "0000-0001-6419-907X")),
              person("Romain", "Francois", role = "aut",
@@ -12,7 +12,6 @@ Description: Examples for Seamless R and C++ integration
  Note that the documentation in this package currently does not cover all the
  features in the package. The site <https://gallery.rcpp.org> regroups a large
  number of examples for 'Rcpp'.
-Depends: R (>= 2.15.1)
 Imports: Rcpp
 LinkingTo: Rcpp
 URL: https://github.com/eddelbuettel/rcppexamples, https://dirk.eddelbuettel.com/code/rcpp.examples.html
